--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-service": "~5.0.0",
     "@supabase/supabase-js": "^1.31.1",
     "core-js": "^3.8.3",
     "uid": "^2.0.0",
