--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli-service": "~5.0.0",
     "@supabase/supabase-js": "^1.31.1",
+    "@vue/cli": "^5.0.4",
     "core-js": "^3.8.3",
     "uid": "^2.0.0",
     "vue": "^3.2.13",
