--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "heroku-postinstall": "npm install && npm run build"
+    "lint": "vue-cli-service lint"
   },
-  "heroku-postinstall": "npm install && npm run build",
   "dependencies": {
-    "@vue/cli-service": "~5.0.0",
     "@supabase/supabase-js": "^1.31.1",
-    "@vue/cli": "^5.0.4",
     "core-js": "^3.8.3",
     "uid": "^2.0.0",
     "vue": "^3.2.13",
