--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "@supabase/supabase-js": "^1.31.1",
     "core-js": "^3.8.3",
+    "hamburgers": "^1.2.1",
     "uid": "^2.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -29,7 +31,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.12",
+    "postcss-import": "^14.1.0",
     "prettier": "^2.4.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "tailwindcss": "^3.0.23"
   },
   "eslintConfig": {
